advantages-section-done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="main">
 
 
-        <!-- hero section -->
+        <!-- ***************      section-1 hero          ***************-->
 
 
         <section class="hero-section">
@@ -63,7 +63,7 @@
         </section>
 
 
-        <!-- our advantages -->
+        <!-- section-2 our advantages -->
 
 
         <section class="advantages-section">
@@ -115,7 +115,7 @@
         </section>
 
 
-        <!-- our team -->
+        <!-- ####################### our team section-3 ########### -->
 
 
         <section class="our-team">
