our team section-3-done

--- a/index.html
+++ b/index.html
@@ -127,32 +127,38 @@
                         <div class="name-profession">
                             <h3 class="title-li">Mark Guerrero</h3>
                             <p class="text"> Product Designer</p>
-                            <ul class="our-team-social-list-link">
-                                <li class="our-team-social-link"><a href="https://www.instagram.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.twitter.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.facebook.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.linkedin.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                            <div>
+                                <ul class="our-team-social-list-link">
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.instagram.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.twitter.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.facebook.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                     <li class="list-li">
@@ -160,36 +166,38 @@
                         <div class="name-profession">
                             <h3 class="title-li">Tom Ford</h3>
                             <p class="text">Frontend Developer</p>
-                            <ul class="our-team-social-list-link">
-                                <li class="our-team-social-link">
-                                    <a href="https://www.instagram.com/" target="_blank" class="our-team-social-link-a">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link">
-                                    <a href="https://www.twitter.com/" target="_blank" class="our-team-social-link-a">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link">
-                                    <a href="https://www.facebook.com/" target="_blank" class="our-team-social-link-a">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link">
-                                    <a href="https://www.linkedin.com/" target="_blank" class="our-team-social-link-a">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                            <div>
+                                <ul class="our-team-social-list-link">
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.instagram.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.twitter.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.facebook.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                     <li class="list-li">
@@ -197,32 +205,38 @@
                         <div class="name-profession">
                             <h3 class="title-li">Camila Garcia</h3>
                             <p class="text">Marketing</p>
-                            <ul class="our-team-social-list-link">
-                                <li class="our-team-social-link"><a href="https://www.instagram.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.twitter.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.facebook.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.linkedin.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                            <div>
+                                <ul class="our-team-social-list-link">
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.instagram.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.twitter.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.facebook.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                     <li class="list-li">
@@ -230,32 +244,38 @@
                         <div class="name-profession">
                             <h3 class="title-li">Daniel Wilson</h3>
                             <p class="text">UI Designer</p>
-                            <ul class="our-team-social-list-link">
-                                <li class="our-team-social-link"><a href="https://www.instagram.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.twitter.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.facebook.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="our-team-social-link"><a href="https://www.linkedin.com/" target="_blank">
-                                        <svg class="our-team-social-links" height="40px" width="40px">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                            <div>
+                                <ul class="our-team-social-list-link">
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.instagram.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.twitter.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.facebook.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="our-team-social-link">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="our-team-social-link-a">
+                                            <svg class="our-team-social-links" height="16px" width="16px">
+                                                <use href="images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -263,7 +283,7 @@
         </section>
 
 
-        <!-- our portfolio -->
+        <!-- ********************our portfolio    section-4 ****** -->
 
 
         <section id="portfolio" class="portfolio">
