section-4_ our-portfolio-done

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
         </section>
 
 
+
         <!-- ********************our portfolio    section-4 ****** -->
 
 
@@ -348,7 +349,7 @@
     </main>
 
 
-    <!-- footer -->
+    <!-- *************************** footer ***************************** -->
 
 
     <footer class="footer">
