--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
 
     <footer class="footer">
         <div class="container footer-container-logo">
-            <a href="./index.html" class="footer-link-logo logo-disp">Web<span
-                    class="footer-link-logo-studio">Studio</span></a>
-            <p class="text">
+            <a href="./index.html" class="footer-link-logo ">Web
+                <span class="footer-link-logo-studio">Studio</span></a>
+            <p class="footer-text">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
         </div>
